day-15/dissalow-root-user-use-exclude.yaml
apiVersion: kyverno/v1
kind: ClusterPolicy
metadata:
  name: dissalow-root-user
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-nunAsRoot
  match: 
    resources:
      kinds:
      - Pod
  exclude:
    resources:
      namespaces:
      - giropops
  validate:
   message: "Root? Isso nao pode amigo!"
   pattern:
     spec:
       containers:
       - securityContent:
          runAsNonRoot: true
